Figuring this out

--- a/Sandbox One.html
+++ b/Sandbox One.html
@@ -8,5 +8,7 @@
 <body>
 	<h1>Sandbox One</h1>
 	<p>This is a dummy file to learn how to use Dreamweaver with GitHub.</p>
+	<p>Chamge made on March 30th, 2025</p>
+	<p>11:48 AM</p>
 </body>
 </html>
