--- a/Sandbox One.html
+++ b/Sandbox One.html
@@ -1,8 +1,9 @@
 <!doctype html>
 <html>
 <head>
-<meta charset="utf-8">
-<title>Sandbox One</title>
+	<meta charset="utf-8">
+	<title>Sandbox One</title>
+	<link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
